tests/fail/cede_borrowed.stderr
tests/fail/cede_borrowed.tk:8:11: error[E0459]: Implicit heap-boxing via pointer initialization is prohibited. Use explicit allocation like 'new Data(...)' stringently
